fixed skewed image on mobile

--- a/assets/css/sass/woocommerce-single.scss
+++ b/assets/css/sass/woocommerce-single.scss
@@ -44,6 +44,7 @@
 
     .wp-post-image {
         max-width: 100%;
+        height: auto;
     }
 
     @media (min-width: 992px) {
